# AOC_Rust

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  readme.md
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  readme.yml
benches/: benchmark.rs
scripts/: pyproject.toml  readme.py
src/: advent_of_code.rs  lib.rs  main.rs  years.rs
src/util/: md5.rs
src/utils/: mod.rs
src/y2015/: day_1.rs  mod.rs
src/y2022/: day_1.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  mod.rs
src/y2023/: day_1.rs  mod.rs
src/year2023/: day01.rs
templates/: day.rs  mod.rs  template.txt
tests/: test.rs
