[package]
edition = "2021"
name = "aoc_rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0", features = ["derive"]}
fs-err = "2.9"
lazy_static = "1.4"
reqwest = {version = "0.11", features = ["blocking", "cookies"]}
serde_json = "1.0"
tera = "1.17"
